[package]
name = "zond-common"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
pnet = { workspace = true }
crossterm = { workspace = true }
async-trait = { workspace = true }
rand = "0.9.2"
rayon = { workspace = true }
tracing = { workspace = true }
mac_oui = { version = "0.4.7", features = ["with-db"] }


