[package]
name = "zond-common"
version = "0.1.3"
edition.workspace = true 
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
pnet = { workspace = true }
crossterm = { workspace = true }
async-trait = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

rand = "0.9.2"
mac_oui = { version = "0.4.7", features = ["with-db"] }

